<resources>
    <string name="app_name">教师助手</string>
    <string name="exit">再按一次退出</string>

    <!-- Main -->
    <string name="user_course">我的课程</string>
    <string name="recent_live">近期直播</string>
    <string name="all_class_hour">全部课时</string>
    <string name="live_class_hour">直播课时</string>
    <string name="live_class">直播教室</string>
    <string name="live_cancel">直播取消</string>
    <string name="auditing_error">审核失败</string>
    <string name="transcoding">转码中</string>
    <string name="transcoding_error">转码失败</string>
    <string name="watch_playback">观看回放</string>
    <string name="create_chapter">新建直播课时</string>
    <string name="input_chapter_name">填写2-30个字的课时名称</string>
    <string name="choice_start_live_time">选择直播时间 +</string>
    <string name="choice_live_length">选择直播时长 +</string>
    <string name="start_live">立即直播</string>
    <string name="try_live_save">试播并保存</string>
    <string name="save_chapter">保存</string>
    <string name="create_live">新建直播</string>
    <string name="please_input_start_live_time">请设置直播时间</string>
    <string name="save_success">保存成功</string>
    <string name="please_input_excess_thirty_number">请不要超过30个字</string>


    <!-- Login -->
    <string name="sure">确定</string>
    <string name="going">继续</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm">确认</string>
    <string name="logout">退出登录</string>
    <string name="registered">注册</string>
    <string name="exit_course">下课</string>
    <string name="login_fails">登录失败</string>
    <string name="find_password">找回密码</string>
    <string name="reset_password">重置密码</string>
    <string name="register_fails">注册失败</string>
    <string name="login_other">其他登录方式</string>
    <string name="phone_hint">输入您的手机号</string>
    <string name="exit_sign_on">是否退出登录</string>
    <string name="algin_valid_code">重新获取</string>
    <string name="valid_code_hint">输入验证码</string>
    <string name="login_valid_code">获取验证码</string>
    <string name="login_password_free">免密登录</string>
    <string name="write_valid_code">请输入验证码</string>
    <string name="enter_new_password">输入新密码</string>
    <string name="enter_please">请输入账号和密码！</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="enter_userId_please">请输入账户名</string>
    <string name="enter_password_please">请输入密码</string>
    <string name="registered_account_number">注册账号</string>
    <string name="two_input_atypism">两次输入的密码不一致</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="login_enter_password_please">请输入密码</string>
    <string name="valid_code_no_valid">验证码格式错误（6位）</string>
    <string name="login_no_wechat_app">赶紧安装一个微信App吧</string>
    <string name="share_no_weibo_app">赶紧安装一个微博App吧</string>
    <string name="login_account_number">手机/邮箱/优酷土豆账号</string>
    <string name="invalid_code">验证码错误或者失效,请重新获取验证码</string>
    <string name="please_enter_phone_number">请输入正确的手机号码</string>
    <string name="please_enter_again_new_password">请再次输入新密码</string>
    <string name="password_remind">密码由6位-16位字母、数字或符号组成，不能是7位以下纯数字</string>


    <string name="version_name">版本号:</string>
    <string name="can_not_find_version_name">没有找到版本号</string>
    <string name="share_complete">分享完成</string>
    <string name="loading_tip">努力加载中...</string>
    <string name="request_fail">请求开小差了</string>
    <string name="no_network">请检查网络连接情况</string>
    <string name="no_network_retry">网络异常，下拉重新加载</string>
    <string name="no_network_retry_click">请求异常，点击重新加载</string>
    <string name="retry_click">点击重新加载</string>
    <string name="zero">0</string>
    <string name="live_stop">停播</string>
    <string name="live_exit">退出</string>
    <string name="live_pilot_ing">正在试播中...</string>
    <string name="live_start">开始上课</string>
    <string name="live_play_error_tips">直播出错了哦</string>
    <string name="live_error_dialog_tips">直播异常中断，是否继续直播？</string>
    <string name="live_exit_dialog_tips">未到下课时间，真的下课吗？</string>
    <string name="live_start_live_dialog_tips">可以正式上课了哦</string>
    <string name="live_start_live_delay">延迟上课</string>
    <string name="live_start_live_now">正式上课</string>
    <string name="live_play_retry">立即重试</string>
    <string name="no_more_data_tips">没有更多了</string>
    <string name="not_get_teacher_certification">该用户没有获得老师认证，不能使用本应用!</string>
    <string name="live_user_coming">来了</string>
    <string name="live_user_go">走了</string>
    <string name="trailer_time">预告时间不能小于当前时间</string>
    <string name="soon_live">即将直播</string>
    <string name="is_live">正在直播</string>
    <string name="today_live">今日直播</string>
    <string name="no_live">无直播课时</string>
    <string name="course_overdue">课程过期</string>
    <string name="course_halt_the_sales">课程已下架</string>
    <string name="live_treatment">直播课时处理中</string>
    <string name="no_chapter_name">请输入课时名称！</string>
    <string name="input_live_length">请设置直播时长</string>
    <string name="input_start_live_time">请设置直播时间</string>
    <string name="upgrade">立即更新</string>
    <string name="live_no_user_permission">直播需要摄像头与麦克风的权限才可以哦</string>
    <string name="live_camera_no_permission">您的相机不可用，请同意使用相机权限</string>
    <string name="live_no_camera">您的设备没有摄像头不能直播哦</string>
    <string name="live_camera_cannot_open">你的相机不可用，请检查相机是否被其他第三方软件禁用</string>
    <string name="live_camera_cannot_support">你的相机不支持直播</string>
    <string name="live_time_unreached">未到上课时间，学生也可以看到试播内容哦！</string>
	<string name="free_try_hear">免费试听</string>
</resources>
